--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@vetixy/circular-std": "^1.0.0",
     "axios": "^1.7.9",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1"
